hooked up ui with cloud run, added matching agent

--- a/talk_to_deployed_agents.ipynb
+++ b/talk_to_deployed_agents.ipynb
@@ -30,10 +30,10 @@
     "  --region us-central1 \\\n",
     "  --project personalplanner-476218 \\\n",
     "  --allow-unauthenticated \\\n",
+    "  --memory=1Gi \\\n",
     "  --set-env-vars=GOOGLE_GENAI_USE_VERTEXAI=True,GOOGLE_CLOUD_PROJECT=personalplanner-476218,GOOGLE_CLOUD_LOCATION=us-central1,MODEL=gemini-2.5-flash,GOOGLE_OAUTH_CLIENT_FILE=/app/.creds/credentials.json,GOOGLE_OAUTH_TOKEN_FILE=/app/.creds/token.json\n",
-    "\n",
-    "\n",
     "```\n",
+    "\n",
     "\n",
     "5) run this ( Change project name )\n",
     "```\n",
@@ -41,8 +41,6 @@
     "  --region=us-central1 \\\n",
     "  --project=personalplanner-476218 \\\n",
     "  --format='value(spec.template.spec.serviceAccountName)'\n",
-    "\n",
-    "\n",
     "```\n",
     "\n",
     "\n",
@@ -56,7 +54,20 @@
     "  --role=\"roles/aiplatform.user\"\n",
     "\n",
     "```\n",
-    "\n"
+    "6) run this if session changed\n",
+    "```\n",
+    "gcloud run services update-traffic project-planner-service \\\n",
+    "  --region us-central1 \\\n",
+    "  --to-latest\n",
+    "```\n",
+    "7) idk anymore force cloud run to a single instance\n",
+    "```\n",
+    "gcloud run services update project-planner-service \\\n",
+    "  --region us-central1 \\\n",
+    "  --max-instances=1 \\\n",
+    "  --min-instances=1\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "56defede",
    "metadata": {},
    "outputs": [],
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "c5b8eccf",
    "metadata": {},
    "outputs": [],
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "d7cb1b69",
    "metadata": {},
    "outputs": [
@@ -213,7 +224,7 @@
      "text": [
       "Available apps:\n",
       "[\n",
-      "  \"TESTING_apollo_service\",\n",
+      "  \"apollo_service\",\n",
       "  \"calendar_service\",\n",
       "  \"gmail_service\",\n",
       "  \"google_docs_service\",\n",
@@ -221,8 +232,11 @@
       "  \"google_search_service\",\n",
       "  \"google_sheets_service\",\n",
       "  \"jobs_service\",\n",
+      "  \"matching_service\",\n",
       "  \"orchestrator\",\n",
+      "  \"personalplanner.egg-info\",\n",
       "  \"resume_customization\",\n",
+      "  \"services\",\n",
       "  \"ui\",\n",
       "  \"utils\"\n",
       "]\n"
@@ -235,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "71aca0b4",
    "metadata": {},
    "outputs": [
@@ -244,9 +258,9 @@
      "output_type": "stream",
      "text": [
       "Status: 200\n",
-      "Headers: {'content-type': 'application/json', 'x-cloud-trace-context': 'ea2542ff400858423b595ac962e3ec03;o=1', 'date': 'Sun, 09 Nov 2025 06:59:09 GMT', 'server': 'Google Frontend', 'Content-Length': '146', 'Alt-Svc': 'h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000'}\n",
+      "Headers: {'content-type': 'application/json', 'x-cloud-trace-context': 'e659bdcedd0ca54ea8e752dd1ce3f1d4', 'date': 'Mon, 10 Nov 2025 07:42:04 GMT', 'server': 'Google Frontend', 'Content-Length': '146', 'Alt-Svc': 'h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000'}\n",
       "Body:\n",
-      " {\"id\":\"sess1\",\"appName\":\"orchestrator\",\"userId\":\"grant\",\"state\":{\"note\":\"session created from Jupyter\"},\"events\":[],\"lastUpdateTime\":1762671549.0}\n",
+      " {\"id\":\"sess1\",\"appName\":\"orchestrator\",\"userId\":\"grant\",\"state\":{\"note\":\"session created from Jupyter\"},\"events\":[],\"lastUpdateTime\":1762760524.0}\n",
       "\n",
       "Parsed session JSON:\n",
       "{\n",
@@ -257,7 +271,7 @@
       "    \"note\": \"session created from Jupyter\"\n",
       "  },\n",
       "  \"events\": [],\n",
-      "  \"lastUpdateTime\": 1762671549.0\n",
+      "  \"lastUpdateTime\": 1762760524.0\n",
       "}\n"
      ]
     },
@@ -269,10 +283,10 @@
        " 'userId': 'grant',\n",
        " 'state': {'note': 'session created from Jupyter'},\n",
        " 'events': [],\n",
-       " 'lastUpdateTime': 1762671549.0}"
+       " 'lastUpdateTime': 1762760524.0}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "615da062",
    "metadata": {},
    "outputs": [
@@ -291,9 +305,159 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: 500\n",
+      "Status: 200\n",
       "Body:\n",
-      " Internal Server Error\n"
+      " [{\"modelVersion\":\"gemini-2.5-flash\",\"content\":{\"parts\":[{\"text\":\"The current time is 07:42:07 UTC on Monday, November 10, 2025.\",\"thoughtSignature\":\"CqEDAePx_17B2AVJmbj75v5VmjNXkB-E6qWlHSpS9O6dxQtHAWQO7nHDKzChmwupzCDBNT3MTdJUWy5wwpbrJmy_vzNwbe0rLKnbpMaxMd9o4_hxntuRBLBTIl6BSeY8GVMufmOCTVPvxNTEPWiJq_miqKxnSaVayBLI6kBCaodqZ-SltCFiU1GD8umGtFuOR2XNqVvrjxgroSZ8T6t5uoLdyQbe2jx40iFCH9FP7-dYJVBear4cpXrkIqJibC4cLf3w4pKIfrvpQcO95pknnVQ0lyHPn_Khzf5FHWJavAe-_IQtscgXbvRyWxy0J9PbiV2ka7dJdFPa2XDwE9mTHUWLSRCKN5L36Kpw8Qe3GSRdT_jjIKAZcngaYLqzrn0NmqBeQWMPZBtdKlWX9pO4PKC4uajZyQeETGM30sLTzwpLlyJVdi2R_3-i9TGyryCkf7b4Lc7LCpgJI58UywwNWwmWXGh2mbj1p4EhGhc-dIz9ak4mqN31tVgVZFHEJmtXG1JzK2al7a7eEBWQjp_gQZ6E7AX_SYsR5-UW7GSJmJh4-pnj\"}],\"role\":\"model\"},\"finishReason\":\"STOP\",\"usageMetadata\":{\"candidatesTokenCount\":28,\"candidatesTokensDetails\":[{\"modality\":\"TEXT\",\"tokenCount\":28}],\"promptTokenCount\":3392,\"promptTokensDetails\":[{\"modality\":\"TEXT\",\"tokenCount\":3392}],\"thoughtsTokenCount\":104,\"totalTokenCount\":3524,\"trafficType\":\"ON_DEMAND\"},\"avgLogprobs\":-0.20513139452253068,\"invocationId\":\"e-9ebf7950-a430-47c5-903d-bcc4ce665030\",\"author\":\"orchestrator\",\"actions\":{\"stateDelta\":{},\"artifactDelta\":{},\"requestedAuthConfigs\":{},\"requestedToolConfirmations\":{}},\"id\":\"95201a50-fc44-4d59-b7ed-79a51c68d635\",\"timestamp\":1762760530.006003}]\n",
+      "Events from orchestrator:\n",
+      "[\n",
+      "  {\n",
+      "    \"modelVersion\": \"gemini-2.5-flash\",\n",
+      "    \"content\": {\n",
+      "      \"parts\": [\n",
+      "        {\n",
+      "          \"text\": \"The current time is 07:42:07 UTC on Monday, November 10, 2025.\",\n",
+      "          \"thoughtSignature\": \"CqEDAePx_17B2AVJmbj75v5VmjNXkB-E6qWlHSpS9O6dxQtHAWQO7nHDKzChmwupzCDBNT3MTdJUWy5wwpbrJmy_vzNwbe0rLKnbpMaxMd9o4_hxntuRBLBTIl6BSeY8GVMufmOCTVPvxNTEPWiJq_miqKxnSaVayBLI6kBCaodqZ-SltCFiU1GD8umGtFuOR2XNqVvrjxgroSZ8T6t5uoLdyQbe2jx40iFCH9FP7-dYJVBear4cpXrkIqJibC4cLf3w4pKIfrvpQcO95pknnVQ0lyHPn_Khzf5FHWJavAe-_IQtscgXbvRyWxy0J9PbiV2ka7dJdFPa2XDwE9mTHUWLSRCKN5L36Kpw8Qe3GSRdT_jjIKAZcngaYLqzrn0NmqBeQWMPZBtdKlWX9pO4PKC4uajZyQeETGM30sLTzwpLlyJVdi2R_3-i9TGyryCkf7b4Lc7LCpgJI58UywwNWwmWXGh2mbj1p4EhGhc-dIz9ak4mqN31tVgVZFHEJmtXG1JzK2al7a7eEBWQjp_gQZ6E7AX_SYsR5-UW7GSJmJh4-pnj\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"role\": \"model\"\n",
+      "    },\n",
+      "    \"finishReason\": \"STOP\",\n",
+      "    \"usageMetadata\": {\n",
+      "      \"candidatesTokenCount\": 28,\n",
+      "      \"candidatesTokensDetails\": [\n",
+      "        {\n",
+      "          \"modality\": \"TEXT\",\n",
+      "          \"tokenCount\": 28\n",
+      "        }\n",
+      "      ],\n",
+      "      \"promptTokenCount\": 3392,\n",
+      "      \"promptTokensDetails\": [\n",
+      "        {\n",
+      "          \"modality\": \"TEXT\",\n",
+      "          \"tokenCount\": 3392\n",
+      "        }\n",
+      "      ],\n",
+      "      \"thoughtsTokenCount\": 104,\n",
+      "      \"totalTokenCount\": 3524,\n",
+      "      \"trafficType\": \"ON_DEMAND\"\n",
+      "    },\n",
+      "    \"avgLogprobs\": -0.20513139452253068,\n",
+      "    \"invocationId\": \"e-9ebf7950-a430-47c5-903d-bcc4ce665030\",\n",
+      "    \"author\": \"orchestrator\",\n",
+      "    \"actions\": {\n",
+      "      \"stateDelta\": {},\n",
+      "      \"artifactDelta\": {},\n",
+      "      \"requestedAuthConfigs\": {},\n",
+      "      \"requestedToolConfirmations\": {}\n",
+      "    },\n",
+      "    \"id\": \"95201a50-fc44-4d59-b7ed-79a51c68d635\",\n",
+      "    \"timestamp\": 1762760530.006003\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "events = run_orchestrator(\n",
+    "    \"\"\"what time is it right now?\"\"\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f3c8065f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'create_session' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      3\u001b[39m SERVICE_URL = \u001b[33m\"\u001b[39m\u001b[33mhttps://project-planner-service-98380938461.us-central1.run.app\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mcreate_session\u001b[49m(initial_state={\u001b[33m\"\u001b[39m\u001b[33mnote\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33msession created from Jupyter\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m      6\u001b[39m APP_NAME = \u001b[33m\"\u001b[39m\u001b[33morchestrator\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# from /list-apps\u001b[39;00m\n\u001b[32m      7\u001b[39m USER_ID = \u001b[33m\"\u001b[39m\u001b[33mgrant\u001b[39m\u001b[33m\"\u001b[39m          \u001b[38;5;66;03m# anything you like\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'create_session' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "SERVICE_URL = \"https://project-planner-service-98380938461.us-central1.run.app\"\n",
+    "create_session(initial_state={\"note\": \"session created from Jupyter\"})\n",
+    "\n",
+    "APP_NAME = \"orchestrator\"  # from /list-apps\n",
+    "USER_ID = \"grant\"          # anything you like\n",
+    "SESSION_ID = \"sess1\"       # anything you like\n",
+    "def pretty_print(obj):\n",
+    "    print(json.dumps(obj, indent=2, ensure_ascii=False))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "run_orchestrator(\n",
+    "    \"\"\"can you look for software engineer jobs posted for the past 7 days \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d28d5b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_orchestrator(\n",
+    "    \"\"\"Tag jobs in the sheet that match 5 years experience in San Francisco, including remote jobs that qualify.\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c62da10c",
+   "metadata": {},
+   "source": [
+    "# trash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1c264ef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available apps:\n",
+      "[\n",
+      "  \"apollo_service\",\n",
+      "  \"calendar_service\",\n",
+      "  \"gmail_service\",\n",
+      "  \"google_docs_service\",\n",
+      "  \"google_drive_service\",\n",
+      "  \"google_search_service\",\n",
+      "  \"google_sheets_service\",\n",
+      "  \"jobs_service\",\n",
+      "  \"matching_service\",\n",
+      "  \"orchestrator\",\n",
+      "  \"personalplanner.egg-info\",\n",
+      "  \"resume_customization\",\n",
+      "  \"services\",\n",
+      "  \"ui\",\n",
+      "  \"utils\"\n",
+      "]\n",
+      "\n",
+      "[create_session]\n",
+      "Status: 409\n",
+      "Body: {\"detail\":\"Session already exists: sess1\"} \n",
+      "Session already exists; reusing it.\n",
+      "\n",
+      "[run_orchestrator]\n",
+      "Status: 500\n",
+      "Body: Internal Server Error \n"
      ]
     },
     {
@@ -303,65 +467,50 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m events = \u001b[43mrun_orchestrator\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[38;5;250;43m    \u001b[39;49m\u001b[33;43;03m\"\"\"can you make a fodler in google drive called ADK-documents and inside there create a folders ADK-resumes, ADK-projects and one empty google sheet called ADK-links \"\"\"\u001b[39;49;00m\n\u001b[32m      3\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 74\u001b[39m, in \u001b[36mrun_orchestrator\u001b[39m\u001b[34m(message_text)\u001b[39m\n\u001b[32m     72\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mStatus:\u001b[39m\u001b[33m\"\u001b[39m, resp.status_code)\n\u001b[32m     73\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBody:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m, resp.text)\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m \u001b[43mresp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     75\u001b[39m events = resp.json()\n\u001b[32m     76\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEvents from orchestrator:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m list_apps()  \u001b[38;5;66;03m# should show \"orchestrator\" in the list\u001b[39;00m\n\u001b[32m      5\u001b[39m create_session(initial_state={\u001b[33m\"\u001b[39m\u001b[33mnote\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33msession created from REPL\u001b[39m\u001b[33m\"\u001b[39m})\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mrun_orchestrator\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcan you look for software engineer jobs posted for the past 7 days\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/hackathon/personalPlanner/orchestrator_client.py:139\u001b[39m, in \u001b[36mrun_orchestrator\u001b[39m\u001b[34m(message_text)\u001b[39m\n\u001b[32m    136\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mStatus:\u001b[39m\u001b[33m\"\u001b[39m, resp.status_code)\n\u001b[32m    137\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBody:\u001b[39m\u001b[33m\"\u001b[39m, resp.text[:\u001b[32m500\u001b[39m], \u001b[33m\"\u001b[39m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(resp.text) > \u001b[32m500\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m139\u001b[39m \u001b[43mresp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    140\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    141\u001b[39m     events = resp.json()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/hackathon/personalPlanner/.venv/lib/python3.12/site-packages/requests/models.py:1026\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1021\u001b[39m     http_error_msg = (\n\u001b[32m   1022\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.url\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m   1023\u001b[39m     )\n\u001b[32m   1025\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response=\u001b[38;5;28mself\u001b[39m)\n",
       "\u001b[31mHTTPError\u001b[39m: 500 Server Error: Internal Server Error for url: https://project-planner-service-98380938461.us-central1.run.app/run"
      ]
     }
    ],
    "source": [
-    "events = run_orchestrator(\n",
-    "    \"\"\"can you make a fodler in google drive called ADK-documents and inside there create a folders ADK-resumes, ADK-projects and one empty google sheet called ADK-links \"\"\"\n",
-    ")\n"
+    "from orchestrator_client import create_session, run_orchestrator, list_apps\n",
+    "\n",
+    "list_apps()  # should show \"orchestrator\" in the list\n",
+    "\n",
+    "create_session(initial_state={\"note\": \"session created from REPL\"})\n",
+    "\n",
+    "run_orchestrator(\"can you look for software engineer jobs posted for the past 7 days\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3c8065f",
+   "cell_type": "markdown",
+   "id": "a44405e8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mevents\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mEvents from orchestrator\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
-   "source": [
-    "# add resumes to drive files \n",
-    "# collect the files when you drop it\n",
-    "\n",
-    "# OnClick -> \n",
-    "(events = run_orchestrator(\n",
-    "    \"hey add those files to google drive folder called Resumes with id {}\"\n",
-    ")\n",
-    ")\n",
-    "# add projects to drive\n",
-    "# OnClick -> \n",
-    "(events = run_orchestrator(\n",
-    "    \"hey add those files to google drive folder called \"projects\" with id {}\"\n",
-    ")\n",
-    ")\n",
-    "if failed\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d28d5b3a",
+   "id": "21cc62c0",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b609c007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "create_session(initial_state={\"note\": \"session from REPL\"})\n",
+    "run_orchestrator(\"can you look for software engineer jobs posted for the past 7 days\")\n"
+   ]
   }
  ],
  "metadata": {
